package dungeon.engine;

public interface HeroTurnListener {
    void onNewTurn(Game game);
}
