package dungeon.engine;

public interface HeroVisitor {
    void visit(Hero hero);
}
