package dungeon.engine.Observers;

public interface GameObserver {
    void update(GameEvent event);
}
